--- a/CA.html
+++ b/CA.html
@@ -9,6 +9,6 @@
       <a-entity geometry="primitive: octahedron; radius: 0.5" position="5 0.75 -3" color="#FFC65D"></a-entity>
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
-    <p>Use this AFrameJS <a href="https://aframe.io/docs/1.7.0/components/geometry.html" target="_blank">resource</a>. Submit your <rollnumber>.html page in your github.io page i.e. https://&lt;yourdomain&gt;.github.io/&lt;rollnumber&gt;.html and submit <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=vDsaA3zPK06W7IZ1VVQKHFzW4INMf2JMjyL9qPnlPbNUMkpZQkY1SlpKWUtQWTY5RVVNS0k2RFQyRi4u" target="_blank">here</a> </p>
+    <p>Use this AFrameJS <a href="https://aframe.io/docs/1.7.0/components/geometry.html" target="_blank">resource</a>. Submit your <rollnumber>.html page in your github.io page i.e. https://&lt;yourdomain&gt;.github.io/&lt;2024101030&gt;.html and submit <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=vDsaA3zPK06W7IZ1VVQKHFzW4INMf2JMjyL9qPnlPbNUMkpZQkY1SlpKWUtQWTY5RVVNS0k2RFQyRi4u" target="_blank">here</a> </p>
   </body>
 </html>
